add profiles linkage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Smart-Exam-Website.github.io/Smart-Exams-Frontend",
+  "homepage": "https://Smart-Exam-Website.github.io/Smart-Exams-Frontend",
   "name": "smart-exam-frontend",
   "version": "0.1.0",
   "private": true,
