--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-verification-code-input": "^1.2.9",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2"
