--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "homepage": "https://Smart-Exam-Website.github.io/Smart-Exams-Frontend",
-  "name": "smart-exam-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,9 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -44,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
