--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-verification-code-input": "^1.2.9",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
