--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-verification-code-input": "^1.2.9",
+    "react-webcam": "^6.0.1",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.3",
